--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,17 @@ main {
   padding: 1rem;
 }
 
-h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+footer {
+  margin-left: 15px;
+  color: rgb(211, 91, 111);
+  text-decoration: underline;
 }
+p {
+  color: rgb(211,91,111);
+  background-color: rgb(243, 221, 225);
+}
+li {
+  color: rgb(211,91,111);
+  background-color: rgb(243, 221, 225);
+}
+
