--- a/styles.css
+++ b/styles.css
@@ -53,4 +53,62 @@ li {
   color: rgb(211,91,111);
   background-color: rgb(243, 221, 225);
 }
+#calendar {
+  max-width: 1100px;
+  margin: 40px auto;
+}
+.card-container {
+  display: flex;
+  justify-content: space-around;
+  max-width: 800px;
+  margin: 20px auto;
+}
 
+.card {
+  width: 200px;
+  padding: 20px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.card-title {
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.hidden-text {
+  display: none;
+  color: #555;
+}
+
+.expanded-card {
+  width: 300px;
+  padding: 30px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.expanded-card:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.expanded-card-title {
+  margin-bottom: 15px;
+  color: #333;
+}
+
+.expanded-card-text {
+  color: #555;
+}
