--- a/styles.css
+++ b/styles.css
@@ -46,12 +46,10 @@ footer {
   text-decoration: underline;
 }
 p {
-  color: rgb(211,91,111);
-  background-color: rgb(243, 221, 225);
+  color: rgb(0, 0, 0);
 }
 li {
-  color: rgb(211,91,111);
-  background-color: rgb(243, 221, 225);
+  color: rgb(0, 0, 0);
 }
 #calendar {
   max-width: 1100px;
